--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "nesbot/carbon": "^2.66"
+        "mike42/escpos-php": "^4.0",
+        "nesbot/carbon": "^2.66",
+        "beyondcode/laravel-websockets": "^1.14",
+        "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
