--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.0.0",
+        "@vuelidate/core": "^2.0.0",
+        "@vuelidate/validators": "^2.0.0",
         "sweetalert2": "^11.6.15",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1",
